[package]
name = "rustydav"
version = "0.1.3"
authors = ["Andrei Nagacevschi <andrein_bio@yahoo.com>"]
edition = "2018"
description = "Small library that can be used to make calls to webdav server"
homepage = "https://github.com/andreinbio/rustydav"
documentation = "https://docs.rs/rustydav"
repository = "https://github.com/andreinbio/rustydav"
keywords = ["webdav", "rustydav"]
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
